Moved Anchor Placement to fix extra space

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h2{
 }
 h3{
 	font-size: 30px;
+	padding-top: 10px;
 }
 h4{
 	font-size: 25px;
@@ -125,7 +126,7 @@ a.anchor{
 	display: block;
 	position: relative;
 	visibility: hidden;
-	top: -66px;
+	top: -125px;
 	height: 0;
 	padding: 0;
 	margin: 0;
